# Rust-RabbitMq

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  a.json  dump.xml
modelos/DocNotas/: DFeTiposBasicos_v1.00 2.xsd  leiauteNFe_v4.00 2.xsd
modelos/Evento_CancSubst_v1.01/: leiauteEventoCancSubst_v1.00.xsd
src/: consumer.rs  logger.rs  main.rs  minio_client.rs  nfe.rs  nfe_parser.rs  nfes.rs  parser.rs  producer.rs  rabbitmq.rs  rabbitmq_consumer.rs  rabbitmq_consumer_old.rs  rabbitmq_producer.rs  sender.rs  test.rs
src/det/: mod.rs
src/impostos/: cibs.rs  cofins.rs  cofins_st.rs  ibs_cbs.rs  icms.rs  ii.rs  ipi.rs  issqn.rs  mod.rs  monofasia.rs  pis.rs  pis_st.rs
src/nfe/: agropecuario.rs  cana.rs  cobr.rs  common.rs  compra.rs  exporta.rs  infAdic.rs  inf_intermed.rs  inf_resp_tec.rs  mod.rs  pag.rs  total.rs  transp.rs
src/nfe/det/: impostoDevol.rs  mod.rs
src/nfe/eventos/: canc_subst.rs  env_evento.rs  evento.rs  mod.rs
src/nfe/impostos/: cibs.rs  cofins_st.rs  ibs_cbs.rs  icms.rs  icms_uf_dest.rs  ipi.rs  is.rs  monofasia.rs
src/nfes/: nfe_mod_55.rs
src/rabbitmq/: common.rs  consumer.rs  mod.rs
