[package]
name = "rust-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
amqp_serde = "0.4.2"
amqprs = "2.1.2"
async-trait = "0.1.89"
bytes = "1.10.1"
dotenv = "0.15.0"
futures = "0.3.31"
log = "0.4.28"
minio = "0.3.0"
quick-xml = { version= "0.38.3", features = ["serialize"]}
quickxml_to_serde = "0.6.0"
rust_decimal = { version = "1.38.0", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
simplelog = "0.12.2"
time = "0.3.43"
tokio = "1.47.1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "parser"
path = "src/parser.rs"

[[bin]]
name = "test"
path = "src/test.rs"
